[tool.poetry]
name = "toeplitzlda"
version = "0.4.0"
description = "Implementation of LDA using a block-Toeplitz structured covariance matrix for stationary spatiotemporal data."
authors = ["Jan Sosulski <mail@jan-sosulski.de>"]
keywords = [
	"linear discriminant analysis",
	"spatiotemporal data",
]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://github.com/jsosulski/toeplitzlda"
repository = "https://github.com/jsosulski/toeplitzlda"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"
blockmatrix = { git = "https://github.com/jsosulski/blockmatrix.git", branch = "rework" }
scikit-learn = "^1"
toeplitz = { version = "0.3.2", optional = true }
mne = { version = "*", optional = true }

[tool.poetry.extras]
solver = ["toeplitz"]
type_checking = ["mne"]

[tool.poetry.urls]
"Preprint" = "https://arxiv.org/abs/2202.02001"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
